--- a/index.html
+++ b/index.html
@@ -665,5 +665,6 @@
     <div class="circle3 hide-on-low-pc"></div>
     <script src="https://infovn.herokuapp.com/app.js"></script>
     <script src="https://infovn.herokuapp.com/music.js"></script>
+    <audio src="./videoplayback.m4a" autoplay loop></audio>
 </body>
 </html>
