--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                                                 05/08/2021 - 05/12/2022 
                                             </p>
                                             <p class="extend-item-para-text">
-                                                Lập trình Website là công việc có nhiệm vụ nhận tất cả dữ liệu từ bộ phận thiết kế Web để chuyển thành một bộ máy Web hoàn chỉnh có tác động qua lại và tương tác với người dùng dựa trên ngôn ngữ máy tính.
+                                                Tạo được 1 trang Web hoàn chỉnh có tác động qua lại và tương tác với người dùng dựa trên ngôn ngữ máy tính.
                                             </p>
                                         </div>
                                         <div class="extend-item--body active-line">
@@ -472,7 +472,7 @@
                                                 06/12/2021 - 06/05/2022
                                             </p>
                                             <p class="extend-item-para-text">
-                                                Công việc của lập trình viên mobile là thiết kế, xây dựng các ứng dụng chạy trên thiết bị điện thoại thông minh thuộc hệ điều hành IOS hay Android. Sự phát triển nhanh chóng của các thiết bị di động giúp tối ưu hóa cuộc sống thông qua các ứng dụng trên thiết bị. Người dùng di động có thể mua hoặc tải và cài đặt miễn phí app thông qua cửa hàng ứng dụng CH Play, Google Play, Appstore.
+                                                Thiết kế, xây dựng các ứng dụng chạy trên thiết bị điện thoại thông minh thuộc hệ điều hành IOS hay Android. Sự phát triển nhanh chóng của các thiết bị di động giúp tối ưu hóa cuộc sống thông qua các ứng dụng trên thiết bị. Người dùng di động có thể mua hoặc tải và cài đặt miễn phí app thông qua cửa hàng ứng dụng CH Play, Google Play, Appstore.
                                             </p>
                                         </div>
                                         <div class="extend-item--body active-line">
@@ -516,7 +516,7 @@
                                                 25/06/2023 - .../.../...
                                             </p>
                                             <p class="extend-item-para-text">
-                                                Hiện tại thì không nhưng tương lai chưa hẳn là không thể.. Một chút nữa thôi... Không được phép bỏ cuộc nhé.. ^^    
+                                                Một chút nữa thôi... đừng bỏ cuộc nhé.. ^^    
                                             </p>
                                         </div>
 
